Fixed login/register alignment

--- a/frontend/src/Authentication/Register/Register.css
+++ b/frontend/src/Authentication/Register/Register.css
@@ -5,6 +5,15 @@
   justify-content: center;
   background-color: #f9d261;
   padding: 20px;
+  border-radius: 25px;
+}
+
+.main {
+  display: flex;
+  justify-content: center;
+  margin: 60px;
+  height: 30vh;
+  
 }
 
 h1 {
@@ -15,8 +24,7 @@ h1 {
 
 form {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .form-group {
